--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "Building intelligent vision and speech-enabled systems that simplify and enhance everyday life."
   location         : "Buffalo, NY"
   employer         : "University at Buffalo, SUNY"
-  uri              : # URL
+  uri              : https://rishi1134.github.io/files/resume.pdf # URL
   email            : "rbhyri@buffalo.edu" 
 
   # Academic websites
